smaller font to prevent layout shifts

--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -146,7 +146,7 @@
   }
 
   .title {
-  font-size: 35px;
+  font-size: 25px;
   font-weight: 900;
   margin-bottom: 33px;
    margin-top: 33px;
